feat(backend): add data validation
